Some more ideas.  Need to make this smaller and more positive

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -4,10 +4,12 @@
 
 API & Application Programming Interface \\\hline
 AURA & Association of Universities for Research in Astronomy \\\hline
+CRUD & Create Retrieve Update and Destroy \\\hline
 CVS & Concurrent Versioning System \\\hline
 DMTN & DM Technical Note \\\hline
 FITS & Flexible Image Transport System \\\hline
 HDF & Hierarchical Data Format \\\hline
 IVOA & International Virtual-Observatory Alliance \\\hline
 LSST & Large Synoptic Survey Telescope \\\hline
+POSIX & Portable Operating System Interface \\\hline
 \end{longtable}
