--- a/local.bib
+++ b/local.bib
@@ -8,3 +8,17 @@
  year={2016},
  publisher={O'Reilly Media}
 }
+
+@article{BRINCKMAN2019854,
+title = {Computing environments for reproducibility: Capturing the \"Whole Tale\"},
+journal = {Future Generation Computer Systems},
+volume = {94},
+pages = {854 - 867},
+year = {2019},
+issn = {0167-739X},
+doi = {https://doi.org/10.1016/j.future.2017.12.029},
+url = {http://www.sciencedirect.com/science/article/pii/S0167739X17310695},
+author = {Adam Brinckman and Kyle Chard and Niall Gaffney and Mihael Hategan and Matthew B. Jones and Kacper Kowalik and Sivakumar Kulasekaran and Bertram Ludäscher and Bryce D. Mecum and Jarek Nabrzyski and Victoria Stodden and Ian J. Taylor and Matthew J. Turk and Kandace Turner},
+keywords = {Living publications, Reproducibility, Provenance, Data sharing, Code sharing},
+abstract = {The act of sharing scientific knowledge is rapidly evolving away from traditional articles and presentations to the delivery of executable objects that integrate the data and computational details (e.g., scripts and workflows) upon which the findings rely. This envisioned coupling of data and process is essential to advancing science but faces technical and institutional barriers. The Whole Tale project aims to address these barriers by connecting computational, data-intensive research efforts with the larger research process—transforming the knowledge discovery and dissemination process into one where data products are united with research articles to create \"living publications\" or tales. The Whole Tale focuses on the full spectrum of science, empowering users in the long tail of science, and power users with demands for access to big data and compute resources. We report here on the design, architecture, and implementation of the Whole Tale environment.}
+}
