--- a/acronyms.tex
+++ b/acronyms.tex
@@ -4,12 +4,21 @@
 
 API & Application Programming Interface \\\hline
 AURA & Association of Universities for Research in Astronomy \\\hline
+AWS & Amazon Web Services \\\hline
+Butler & A middleware component for persisting and retrieving image datasets (raw or processed), calibration reference data, and catalogs. \\\hline
+CAOM & Common Archive Observation Model \\\hline
 CRUD & Create Retrieve Update and Destroy \\\hline
 CVS & Concurrent Versioning System \\\hline
+Center & An entity managed by AURA that is responsible for execution of a federally funded project \\\hline
 DMTN & DM Technical Note \\\hline
+Data Management & The LSST Subsystem responsible for the Data Management System (DMS), which will capture, store, catalog, and serve the LSST dataset to the scientific community and public. The DM team is responsible for the DMS architecture, applications, middleware, infrastructure, algorithms, and Observatory Network Design. DM is a distributed team working at LSST and partner institutions, with the DM Subsystem Manager located at LSST headquarters in Tucson. \\\hline
 FITS & Flexible Image Transport System \\\hline
 HDF & Hierarchical Data Format \\\hline
 IVOA & International Virtual-Observatory Alliance \\\hline
+JSON & JavaScript Object Notation \\\hline
 LSST & Large Synoptic Survey Telescope \\\hline
+Object & In LSST nomenclature this refers to an astronomical object, such as a star, galaxy, or other physical entity. E.g., comets, asteroids are also Objects but typically called a Moving Object or a Solar System Object (SSObject). One of the DRP data products is a table of Objects detected by LSST which can be static, or change brightness or position with time. \\\hline
 POSIX & Portable Operating System Interface \\\hline
+VO & Virtual Observatory \\\hline
+metadata & General term for data about data, e.g., attributes of astronomical objects (e.g. images, sources, astroObjects, etc.) that are characteristics of the objects themselves, and facilitate the organization, preservation, and query of data sets. (E.g., a FITS header contains metadata). \\\hline
 \end{longtable}
