--- a/acronyms.tex
+++ b/acronyms.tex
@@ -8,13 +8,17 @@ AWS & Amazon Web Services \\\hline
 Butler & A middleware component for persisting and retrieving image datasets (raw or processed), calibration reference data, and catalogs. \\\hline
 CAOM & Common Archive Observation Model \\\hline
 CRUD & Create Retrieve Update and Destroy \\\hline
-CVS & Concurrent Versioning System \\\hline
+CSV & Comma Separated Values \\\hline
 Center & An entity managed by AURA that is responsible for execution of a federally funded project \\\hline
 DMTN & DM Technical Note \\\hline
 Data Management & The LSST Subsystem responsible for the Data Management System (DMS), which will capture, store, catalog, and serve the LSST dataset to the scientific community and public. The DM team is responsible for the DMS architecture, applications, middleware, infrastructure, algorithms, and Observatory Network Design. DM is a distributed team working at LSST and partner institutions, with the DM Subsystem Manager located at LSST headquarters in Tucson. \\\hline
 FITS & Flexible Image Transport System \\\hline
+FSAAS & Filesystem as a Service \\\hline
+FUSE & a user space filesystem framework \\\hline
 HDF & Hierarchical Data Format \\\hline
-IVOA & International Virtual-Observatory Alliance \\\hline
+HPC & High Performance Computing \\\hline
+HTC & High Throughput Computing \\\hline
+IRAF & Image Reduction and Analysis Facility \\\hline
 JSON & JavaScript Object Notation \\\hline
 LSST & Large Synoptic Survey Telescope \\\hline
 Object & In LSST nomenclature this refers to an astronomical object, such as a star, galaxy, or other physical entity. E.g., comets, asteroids are also Objects but typically called a Moving Object or a Solar System Object (SSObject). One of the DRP data products is a table of Objects detected by LSST which can be static, or change brightness or position with time. \\\hline
