layers in  and butler

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -7,6 +7,7 @@ AURA & Association of Universities for Research in Astronomy \\\hline
 AWS & Amazon Web Services \\\hline
 Butler & A middleware component for persisting and retrieving image datasets (raw or processed), calibration reference data, and catalogs. \\\hline
 CAOM & Common Archive Observation Model \\\hline
+CI & Continuous Integration \\\hline
 CRUD & Create Retrieve Update and Destroy \\\hline
 CSV & Comma Separated Values \\\hline
 Center & An entity managed by AURA that is responsible for execution of a federally funded project \\\hline
@@ -23,6 +24,8 @@ JSON & JavaScript Object Notation \\\hline
 LSST & Large Synoptic Survey Telescope \\\hline
 Object & In LSST nomenclature this refers to an astronomical object, such as a star, galaxy, or other physical entity. E.g., comets, asteroids are also Objects but typically called a Moving Object or a Solar System Object (SSObject). One of the DRP data products is a table of Objects detected by LSST which can be static, or change brightness or position with time. \\\hline
 POSIX & Portable Operating System Interface \\\hline
-VO & Virtual Observatory \\\hline
+algorithm & A computational implementation of a calculation or some method of processing. \\\hline
 metadata & General term for data about data, e.g., attributes of astronomical objects (e.g. images, sources, astroObjects, etc.) that are characteristics of the objects themselves, and facilitate the organization, preservation, and query of data sets. (E.g., a FITS header contains metadata). \\\hline
+pipeline & A configured sequence of software tasks (Stages) to process data and generate data products. Example: Association Pipeline. \\\hline
+provenance & Information about how LSST images, Sources, and Objects were created (e.g., versions of pipelines, algorithmic components, or templates) and how to recreate them. \\\hline
 \end{longtable}
