more on Cybner INfra

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -28,4 +28,5 @@ algorithm & A computational implementation of a calculation or some method of pr
 metadata & General term for data about data, e.g., attributes of astronomical objects (e.g. images, sources, astroObjects, etc.) that are characteristics of the objects themselves, and facilitate the organization, preservation, and query of data sets. (E.g., a FITS header contains metadata). \\\hline
 pipeline & A configured sequence of software tasks (Stages) to process data and generate data products. Example: Association Pipeline. \\\hline
 provenance & Information about how LSST images, Sources, and Objects were created (e.g., versions of pipelines, algorithmic components, or templates) and how to recreate them. \\\hline
+stack & A record of all versions of a document uploaded to a particular DocuShare handle \\\hline
 \end{longtable}
